fix footer on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,6 +6,10 @@
   flex-direction: row;
   justify-content: space-between;
   margin: 5% 10%;
+  @media (max-width: 700px) {
+    font-size: 1.25rem;
+    margin: 5% 5%;
+  }
 }
 
 .footerText a {
